--- a/promtail-local-config.yaml
+++ b/promtail-local-config.yaml
@@ -3,17 +3,81 @@ server:
   grpc_listen_port: 0
 
 clients:
-  - url: http://192.168.178.70:3100/loki/api/v1/push
+  - url: http://ec2-13-40-200-53.eu-west-2.compute.amazonaws.com/:3100/loki/api/v1/push
 
 scrape_configs:
-- job_name: windows
+- job_name: Application
+  pipeline_stages:
+  
+  - json:
+      expressions:
+        event_id: event_id
+        eventRecordID: eventRecordID
+  - labels:
+      event_id:
+      eventRecordID:
+      
+
   windows_events:
     use_incoming_timestamp: false
     bookmark_path: C:\promtail\bookmark.xml
     eventlog_name: "Application"
     xpath_query: '*'
-    labels:
-      job: windows
+
+
   relabel_configs:
     - source_labels: ['computer']
       target_label: 'host'
+
+- job_name: System
+  pipeline_stages:
+  
+  - json:
+      expressions:
+        event_id: event_id
+        eventRecordID: eventRecordID 
+  - labels:
+      event_id:
+      eventRecordID:
+
+  windows_events:
+    use_incoming_timestamp: false
+    bookmark_path: C:\promtail\bookmark.xml
+    eventlog_name: "System"
+    xpath_query: '*'
+
+- job_name: Security
+  pipeline_stages:
+  
+  - json:
+      expressions:
+        event_id: event_id
+        eventRecordID: eventRecordID
+  - labels:
+      event_id:
+      eventRecordID:
+
+
+  windows_events:
+    use_incoming_timestamp: false
+    bookmark_path: C:\promtail\bookmark.xml
+    eventlog_name: "Security"
+    xpath_query: '*'
+
+- job_name: Setup
+  pipeline_stages:
+  
+  - json:
+      expressions:
+        event_id: event_id
+        eventRecordID: eventRecordID
+  - labels:
+      event_id:
+      eventRecordID:
+
+
+  windows_events:
+    use_incoming_timestamp: false
+    bookmark_path: C:\promtail\bookmark.xml
+    eventlog_name: "Setup"
+    xpath_query: '*'
