--- a/promtail-local-config.yaml
+++ b/promtail-local-config.yaml
@@ -3,7 +3,7 @@ server:
   grpc_listen_port: 0
 
 clients:
-  - url: http://ec2-13-40-200-53.eu-west-2.compute.amazonaws.com/:3100/loki/api/v1/push
+  - url: localhost:3100
 
 scrape_configs:
 - job_name: Application
@@ -42,7 +42,7 @@ scrape_configs:
 
   windows_events:
     use_incoming_timestamp: false
-    bookmark_path: C:\promtail\bookmark.xml
+    bookmark_path: C:\temp\promtail\main\promtail-main\bookmark.xml
     eventlog_name: "System"
     xpath_query: '*'
 
@@ -60,7 +60,7 @@ scrape_configs:
 
   windows_events:
     use_incoming_timestamp: false
-    bookmark_path: C:\promtail\bookmark.xml
+    bookmark_path: C:\temp\promtail\main\promtail-main\bookmark.xml
     eventlog_name: "Security"
     xpath_query: '*'
 
@@ -78,6 +78,6 @@ scrape_configs:
 
   windows_events:
     use_incoming_timestamp: false
-    bookmark_path: C:\promtail\bookmark.xml
+    bookmark_path: C:\temp\promtail\main\promtail-main\bookmark.xml
     eventlog_name: "Setup"
     xpath_query: '*'
