--- a/promtail-local-config.yaml
+++ b/promtail-local-config.yaml
@@ -3,7 +3,7 @@ server:
   grpc_listen_port: 0
 
 clients:
-  - url: localhost:3100
+  - url: http://logging:3100/loki/api/v1/push
 
 scrape_configs:
 - job_name: Application
